--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,8 @@
         "psr-4": {
             "React\\Sh\\": "src"
         }
+    },
+    "require-dev": {
+        "monolog/monolog": "^2.1"
     }
 }
