--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
             "email": "david.cole1340@gmail.com"
         }
     ],
-    "license": "GPL-3.0-or-later",
+    "license": "MIT",
     "require": {
         "clue/stdio-react": "^2.3",
         "symfony/var-dumper": "^5.1"
